fix: unit tests

--- a/packages/q3-ui-forms/src/fields/Chips/Chips.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/Chips/Chips.stories.mdx
@@ -47,7 +47,7 @@ prop to enable users to enter anything they choose.
 
 <Preview>
   <Story name="Free-solo">
-    <Form>
+    <Form debug>
       <Field
         type="chips"
         name="demo"
