fix: Story name

--- a/packages/q3-ui-forms/src/fields/Password/Password.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/Password/Password.stories.mdx
@@ -10,7 +10,7 @@ import { Form, Field } from '../../builders';
 <Meta title="Forms/Fields/Password" component={Password} />
 
 <Preview>
-  <Story name="With validation">
+  <Story name="With toggle visibility">
     <Form debug>
       <Field name="password" type="password" />
     </Form>
