style: sidebar and icon margin

--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -44,6 +44,7 @@ import { Exists } from '../src/presets';
           }}
         >
           <Field name="email" type="email" />
+          <Field name="password" type="password" />
           <Field name="tel" type="tel" />
           <Field name="postal" type="postal" />
           <Field name="range" type="range" />
