--- a/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
+++ b/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
@@ -24,6 +24,7 @@ import rows from '../seed/rows';
       bulkEditorComponent={<p>Bulk editor</p>}
       renderNestedTableRow={() => <p>Check me out</p>}
       perPage={3}
+      sortOptions={['id', 'firstName']}
       cardProps={{
         title: 'firstName',
         attributes: ['position', 'firstName', 'id'],
