wip: extract Search and sorting

--- a/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
+++ b/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
@@ -27,7 +27,7 @@ import rows from '../seed/rows';
       sortOptions={['id', 'firstName']}
       cardProps={{
         title: 'firstName',
-        attributes: ['position', 'firstName', 'id'],
+        attributes: ['firstName', 'id', 'age'],
         editable: {
           position: {
             renderer: () => <div>Something custom!</div>,
