--- a/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
+++ b/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
@@ -8,7 +8,7 @@ import Repeater from '../support';
 import rows from '../seed/rows';
 export const isEven = (x) => x.id % 2 === 0;
 
-<Meta title="Repeater/Test" component={Repeater} />
+<Meta title="Repeater/Repeater" component={Repeater} />
 
 # Repeater
 
