--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -15,6 +15,7 @@ import Wrapper, {
 } from '../src/builders/Wrapper/Wrapper';
 import { countries } from '../src/fields/__fixtures__/options';
 import { Exists } from '../src/presets';
+import { castToBeginning, castToEnd } from '../src/helpers';
 
 <Meta title="Forms/Field" component={Field} />
 
@@ -41,6 +42,11 @@ import { Exists } from '../src/presets';
               { fruit: 'Apple' },
               { fruit: 'Pear' },
             ],
+          }}
+          marshalSelectively
+          marshal={{
+            'dateRange<': [castToBeginning],
+            'dateRange>': [castToEnd],
           }}
         >
           <Field name="email" type="email" />
@@ -79,12 +85,6 @@ import { Exists } from '../src/presets';
             xl={6}
             lg={6}
             md={6}
-          />
-          <Field
-            name="required"
-            type="text"
-            label="Required"
-            required
           />
           <Field
             name="number"
