--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -14,7 +14,10 @@ import Wrapper, {
   InnerForm,
 } from '../src/builders/Wrapper/Wrapper';
 import { countries } from '../src/fields/__fixtures__/options';
-import { Exists } from '../src/presets';
+import {
+  Exists,
+  NorthAmericaRegionalSelect,
+} from '../src/presets';
 
 <Meta title="Forms/Field" component={Field} />
 
@@ -168,6 +171,19 @@ minimum values, maximum values, and required values.
         })}
       />
     </Form>
+  </Story>
+</Preview>
+
+## Presets
+
+<Preview>
+  <Story name="Presets">
+    <Provider>
+      <Form debug>
+        <Field name="postal" type="postal" />
+        <NorthAmericaRegionalSelect />
+      </Form>
+    </Provider>
   </Story>
 </Preview>
 
