test(wip): setup test to dos

--- a/packages/q3-ui-forms/src/fields/MultiSelect/MultiSelect.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/MultiSelect/MultiSelect.stories.mdx
@@ -22,7 +22,7 @@ import { Form, Field } from '../../builders';
       <Field
         name="demo"
         type="multiselect"
-        options={countries}
+        options={[...countries, ...countries, ...countries]}
         label="Custom label"
         required
         filter
