--- a/packages/q3-ui-forms/src/fields/MultiSelect/MultiSelect.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/MultiSelect/MultiSelect.stories.mdx
@@ -22,8 +22,21 @@ import { Form, Field } from '../../builders';
       <Field
         name="demo"
         type="multiselect"
+        options={[...countries, ...countries, ...countries]}
+        label="Custom label"
+        required
+        filter
+      />
+    </Form>
+  </Story>
+  <Story name="DisplayLabelAsValue">
+    <Form debug initialValues={{ demo: ['CA'] }}>
+      <Field
+        name="demo"
+        type="multiselect"
         options={countries}
         label="Custom label"
+        displayLabelAsValue
         required
         filter
       />
