chore: add commas to pricing

--- a/packages/q3-ui-forms/src/presets/NewPasswordFields/NewPasswordFields.stories.mdx
+++ b/packages/q3-ui-forms/src/presets/NewPasswordFields/NewPasswordFields.stories.mdx
@@ -4,7 +4,7 @@ import {
   Preview,
   Props,
 } from '@storybook/addon-docs/blocks';
-import Password from './NewPasswordFields.jsx';
+import Password from './NewPasswordFields';
 import { Form, Field } from '../../builders';
 
 <Meta
@@ -14,11 +14,8 @@ import { Form, Field } from '../../builders';
 
 <Preview>
   <Story name="New Password">
-    <Form>
-      <Password
-        newPassword="3mE-----"
-        confirmNewPassword="3mE-----"
-      />
+    <Form debug>
+      {(values) => <Password {...values} />}
     </Form>
   </Story>
 </Preview>
