--- a/packages/q3-ui-charts/src/components/Pie/Pie.stories.mdx
+++ b/packages/q3-ui-charts/src/components/Pie/Pie.stories.mdx
@@ -5,21 +5,15 @@ import {
   Props,
 } from '@storybook/addon-docs/blocks';
 import Pie from './Pie';
+import data from '../../../tests/fixtures/sample-small';
 
 <Meta title="Charts/Pie" component={Pie} />
 
 # Pie
 
 <Preview>
-  <Story name="Single bar">
-    <Pie
-      name="name"
-      value="value"
-      data={[
-        { name: 'Jan', value: 10 },
-        { name: 'Feb', value: 22 },
-      ]}
-    />
+  <Story name="Single">
+    <Pie {...data} />
   </Story>
 </Preview>
 
