--- a/packages/q3-ui-charts/src/components/Bar/Bar.stories.mdx
+++ b/packages/q3-ui-charts/src/components/Bar/Bar.stories.mdx
@@ -5,31 +5,19 @@ import {
   Props,
 } from '@storybook/addon-docs/blocks';
 import Bar from './Bar';
+import data from '../../../tests/fixtures/sample-large';
+import data1 from '../../../tests/fixtures/sample-large-double';
 
 <Meta title="Charts/Bar" component={Bar} />
 
 # Bar
 
 <Preview>
-  <Story name="Single bar">
-    <Bar
-      name="name"
-      value="value"
-      data={[
-        { name: 'Jan', value: 10 },
-        { name: 'Feb', value: 22 },
-      ]}
-    />
+  <Story name="Single">
+    <Bar {...data} />
   </Story>
-  <Story name="Double bar">
-    <Bar
-      name="name"
-      value={['value', 'value2']}
-      data={[
-        { name: 'Jan', value: 10, value2: 12 },
-        { name: 'Feb', value: 22, value2: 8 },
-      ]}
-    />
+  <Story name="Double">
+    <Bar {...data1} />
   </Story>
 </Preview>
 
