--- a/packages/q3-ui-filemanager/src/FileList/FileList.stories.mdx
+++ b/packages/q3-ui-filemanager/src/FileList/FileList.stories.mdx
@@ -15,6 +15,7 @@ import support from '../../tests/support';
 <Preview>
   <Story name="As default">
     <FileList
+      onDelete={() => {}}
       files={files}
       onDrop={support.onDrop.succeed}
     />
