--- a/packages/q3-ui/src/popover/Popover.stories.mdx
+++ b/packages/q3-ui/src/popover/Popover.stories.mdx
@@ -5,7 +5,7 @@ import {
   Props,
 } from '@storybook/addon-docs/blocks';
 import { Box } from '@material-ui/core';
-import Popover from './index.jsx';
+import Popover from '.';
 
 <Meta title="UI/Popover" component={Popover} />
 
