--- a/packages/q3-ui/src/popover/Popover.stories.mdx
+++ b/packages/q3-ui/src/popover/Popover.stories.mdx
@@ -15,4 +15,12 @@ import Popover from '.';
       <Box m={2}>Popover component</Box>
     </Popover>
   </Story>
+  <Story name="Disabled Popover">
+    <Popover
+      popoverChildren={<div>popover children</div>}
+      disablePopover
+    >
+      <Box m={2}>Popover component</Box>
+    </Popover>
+  </Story>
 </Preview>
