style: dark colour popover

--- a/packages/q3-ui-datatables/stories/Features.stories.mdx
+++ b/packages/q3-ui-datatables/stories/Features.stories.mdx
@@ -63,7 +63,7 @@ import TableView from '../src';
             ...v,
             name: v.seq,
             imgSrc: 'https://i.pravatar.cc/150?img=20',
-            description: `${v.id} ${v.id}`,
+            description: `${v.id} ${v.id} ${v.id} ${v.id}`,
             url: v.id,
             currency: {
               base: v.currency,
