style: repeater classes and buttons

--- a/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
+++ b/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
@@ -77,7 +77,11 @@ export const isSeq = (item) => Number(item.seq) === 211;
         attributes: ['price', 'category'],
         editable: {
           price: {
+            type: 'number',
             toPrice: true,
+          },
+          category: {
+            type: 'text',
           },
         },
         makeLink: () => '/to',
