chore: table shading and custom th value

--- a/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
+++ b/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
@@ -71,6 +71,7 @@ export const isSeq = (item) => Number(item.seq) === 211;
           fn: (x) => x.category === 'Publishing',
         },
       ]}
+      th="product"
       cardProps={{
         title: 'sku',
         describe: 'description',
