feat(wip): first wave of rte features

--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -64,6 +64,7 @@ import {
             min={0}
             max={5}
           />
+          <Field name="rte" type="editor" />
           <Exists name="group" />
           <Field
             name="autocomplete"
